[package]
name = "lifx-mqtt"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "=1.5.0"
color-eyre = "=0.6.3"
config = "=0.14.0"
derive_builder = "=0.20.0"
eyre = "=0.6.12"
futures = "=0.3.30"
palette = { version = "=0.7.6", features = ["serializing"] }
rand = "=0.8.5"
rumqttc = "=0.24.0"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.121"
serde_path_to_error = "=0.1.16"
tokio = { version = "=1.39.2", features = ["macros", "full"] }

# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
