[package]
name = "lifx-mqtt"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "=1.5.0"
color-eyre = "=0.6.5"
config = "=0.15.17"
derive_builder = "=0.20.2"
eyre = "=0.6.12"
futures = "=0.3.31"
palette = { version = "=0.7.6", features = ["serializing"] }
rand = "=0.8.5"
rumqttc = "=0.25.0"
serde = { version = "=1.0.226", features = ["derive"] }
serde_json = "=1.0.145"
serde_path_to_error = "=0.1.20"
tokio = { version = "=1.48.0", features = ["macros", "full"] }

# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
